# yaiot-bot

./: .gitignore  Makefile  README.md  pyproject.toml
src/: bot.py  config.py  db.py  main.py  models.py  periodic.py  server.py  yandex.py
src/handlers/: alerts.py  auth.py  links.py  scenarios.py  smart_home.py
src/middlewaries/: auth_middleware.py
